Fix nav on mobile

--- a/src/less/automobile.less
+++ b/src/less/automobile.less
@@ -39,6 +39,8 @@
         #navLinks {
             flex-direction: column;
             margin: 0;
+            height: 100%;
+            margin-top: 30%;
 
             .navlink {
                 margin-top: 10px;
